force-app/main/default/objects/Plan_Representative_Association__c/Plan_Representative_Association__c.object-meta.xml
<CustomObject>
    <description>Object to store the Plan Representatives associations on Territory Plans(Direct/Indirect). These records will only be created in case user manually adds or removes users from the component</description>
    <label>Plan Representative Association</label>
    <nameField>
        <displayFormat>PRA-{00000000}</displayFormat>
        <label>Plan Representative Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Representative Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>