force-app/main/default/objects/Plan_Representative_Association__c/fields/Is_Removed__c.field-meta.xml
<CustomField>
    <fullName>Is_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field will be checked if default user/plan is going to be removed</description>
    <inlineHelpText>Field will be checked if default user/plan is going to be remove</inlineHelpText>
    <label>Is Removed?</label>
    <type>Checkbox</type>
</CustomField>