force-app/main/default/objects/Plan_Representative_Association__c/fields/Territory_Plan__c.field-meta.xml
<CustomField>
    <fullName>Territory_Plan__c</fullName>
    <description>Holds Plan as Master Detail to Associations</description>
    <inlineHelpText>Holds Plan as Master Detail to Associations</inlineHelpText>
    <label>Territory Plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Territory Plans can be selected</errorMessage>
        <filterItems>
            <field>Plan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Territory Plan, Channel Partner Territory Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Territory Plan Representative Associations</relationshipLabel>
    <relationshipName>Territory_Plan_Representatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>