force-app/main/default/objects/Plan_Representative_Association__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds User for which the Plan is associated</description>
    <inlineHelpText>Holds User for which the Plan is associated</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Representative_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>